Add aluminnium echarts by Xu yida